Name: biegunka-archive
Version: 0.1.0.0
Synopsis: Tar/Zip archives support as Source.
License: MIT
License-file: LICENSE
Author: Matvey Aksenov
Maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
Category: System
Cabal-Version: >= 1.8
Build-Type: Simple

Library
  Build-Depends: base >= 3 && < 5,
                 biegunka-core,
                 filepath,
                 directory,
                 free,
                 zlib,
                 bzlib,
                 tar,
                 zip-archive,
                 download-curl,
                 SHA,
                 bytestring
  HS-Source-Dirs: src
  Exposed-Modules: Biegunka.Source.Tar
                   Biegunka.Source.Zip
  Other-Modules: Biegunka.Source.Archive
  GHC-Options: -Wall
               -fno-warn-unused-do-bind

test-suite biegunka-tar-tests
  type: exitcode-stdio-1.0
  build-depends: base >= 3 && < 5,
                 biegunka-core,
                 biegunka-archive,
                 directory,
                 filepath,
                 lens,
                 HUnit,
                 directory-layout
  main-is: tests/tar/Main.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite biegunka-zip-tests
  type: exitcode-stdio-1.0
  build-depends: base >= 3 && < 5,
                 biegunka-core,
                 biegunka-archive,
                 directory,
                 filepath,
                 lens,
                 HUnit,
                 directory-layout
  main-is: tests/zip/Main.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
