Name: biegunka-tar
Version: 0.1.0.0
Synopsis: Tar archives support as Source.
License: MIT
License-file: LICENSE
Author: Matvey Aksenov
Maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
Category: System
Cabal-Version: >= 1.8
Build-Type: Simple

Library
  Build-Depends: base >= 3 && < 5,
                 biegunka-core,
                 lens,
                 free,
                 tar,
                 zlib,
                 bzlib,
                 bytestring
  HS-Source-Dirs: src
  Exposed-Modules: Biegunka.Source.Tar
  GHC-Options: -Wall
               -fno-warn-unused-do-bind
